Nawigacja między sekcjami. Metaopisy strony.

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,39 @@
 <!doctype html>
-<html lang="pl">
+<html lang="pl" class="scroll-smooth">
   <head>
     <meta charset="utf-8" />
     <title>Pelvi-Active Małgorzata Leleń | Fizjoterapia uroginekologiczna</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Nietrzymanie moczu, obniżenie narządów, rozejście mięśnia prostego, blizna po cesarskim cięciu i ból miednicy. Bezpieczna terapia i ćwiczenia. Lublin."
+    />
+    <link rel="canonical" href="https://www.pelvi-active.pl/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Pelvi Active" />
+    <meta
+      property="og:title"
+      content="Pelvi-Active Małgorzata Leleń | Fizjoterapia uroginekologiczna (Lublin)"
+    />
+    <meta
+      property="og:description"
+      content="Nietrzymanie moczu, obniżenia, rozejście brzucha, blizna po CC, ból miednicy. Terapia i ćwiczenia dopasowane do Ciebie. Umów wizytę."
+    />
+    <meta property="og:url" content="https://www.pelvi-active.pl/" />
+    <meta property="og:image" content="https://www.pelvi-active.pl/public/images/logo.webp" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Pelvi-Active Małgorzata Leleń | Fizjoterapia uroginekologiczna"
+    />
+    <meta
+      name="twitter:description"
+      content="Dno miednicy, blizna po CC, rozejście brzucha, obniżenia i nietrzymanie moczu. Bezpieczna terapia i ćwiczenia."
+    />
+    <meta name="twitter:image" content="https://www.pelvi-active.pl/public/images/logo.webp" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   </head>
   <body>
