Dopracowanie wersji mobilnej sekcji z ofertą.

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="pl" class="scroll-smooth scroll-p-20">
+<html lang="pl" class="scroll-smooth scroll-p-16 lg:scroll-p-20">
   <head>
     <meta charset="utf-8" />
     <title>Pelvi-Active Małgorzata Leleń | Fizjoterapia uroginekologiczna</title>
