--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,18 @@
     />
     <meta name="twitter:image" content="https://www.pelvi-active.pl/public/images/logo.webp" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M71P4BP7S5"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'G-M71P4BP7S5');
+    </script>
   </head>
   <body>
     <app-root></app-root>
